[Deepa Kushwaha] Added test cases